@@ -1,39 +1,52 @@
 /*
-* Licensed to the Apache Software Foundation (ASF) under one or more
-* contributor license agreements.  See the NOTICE file distributed with
-* this work for additional information regarding copyright ownership.
-* The ASF licenses this file to You under the Apache License, Version 2.0
-* (the "License"); you may not use this file except in compliance with
-* the License.  You may obtain a copy of the License at
-*
-*  http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*/
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *  http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.apache.zeppelin.python;
 
 import org.apache.commons.lang.StringUtils;
-import org.apache.zeppelin.interpreter.*;
+import org.apache.zeppelin.interpreter.Interpreter;
+import org.apache.zeppelin.interpreter.InterpreterContext;
+import org.apache.zeppelin.interpreter.InterpreterException;
+import org.apache.zeppelin.interpreter.InterpreterOutput;
+import org.apache.zeppelin.interpreter.InterpreterResult;
 import org.apache.zeppelin.interpreter.InterpreterResult.Code;
 import org.apache.zeppelin.interpreter.InterpreterResult.Type;
 import org.apache.zeppelin.scheduler.Scheduler;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.*;
-import java.util.*;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Properties;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /**
  * Conda support
+ * TODO(zjffdu) Add removing conda env
  */
 public class PythonCondaInterpreter extends Interpreter {
-  Logger logger = LoggerFactory.getLogger(PythonCondaInterpreter.class);
+  private static Logger logger = LoggerFactory.getLogger(PythonCondaInterpreter.class);
   public static final String ZEPPELIN_PYTHON = "zeppelin.python";
   public static final String CONDA_PYTHON_PATH = "/bin/python";
   public static final String DEFAULT_ZEPPELIN_PYTHON = "python";
@@ -57,7 +70,7 @@ public class PythonCondaInterpreter extends Interpreter {
   }
 
   @Override
-  public void open() {
+  public void open() throws InterpreterException {
 
   }
 
@@ -128,7 +141,6 @@ public class PythonCondaInterpreter extends Interpreter {
 
   private void changePythonEnvironment(String envName)
       throws IOException, InterruptedException, InterpreterException {
-    PythonInterpreter python = getPythonInterpreter();
     String binPath = null;
     if (envName == null) {
       binPath = getProperty(ZEPPELIN_PYTHON);
@@ -145,33 +157,17 @@ public class PythonCondaInterpreter extends Interpreter {
       }
     }
     setCurrentCondaEnvName(envName);
-    python.setPythonCommand(binPath);
+    getInterpreterInTheSameSessionByClassName(PythonInterpreter.class, false)
+        .setPythonExec(binPath);
   }
 
   private void restartPythonProcess() throws InterpreterException {
-    PythonInterpreter python = getPythonInterpreter();
-    python.close();
-    python.open();
-  }
+    logger.debug("Restarting PythonInterpreter");
+    PythonInterpreter pythonInterpreter =
+        getInterpreterInTheSameSessionByClassName(PythonInterpreter.class, false);
+    pythonInterpreter.close();
+    pythonInterpreter.open();
 
-  protected PythonInterpreter getPythonInterpreter() throws InterpreterException {
-    LazyOpenInterpreter lazy = null;
-    PythonInterpreter python = null;
-    Interpreter p =
-        getInterpreterInTheSameSessionByClassName(PythonInterpreter.class.getName());
-
-    while (p instanceof WrappedInterpreter) {
-      if (p instanceof LazyOpenInterpreter) {
-        lazy = (LazyOpenInterpreter) p;
-      }
-      p = ((WrappedInterpreter) p).getInnerInterpreter();
-    }
-    python = (PythonInterpreter) p;
-
-    if (lazy != null) {
-      lazy.open();
-    }
-    return python;
   }
 
   public static String runCondaCommandForTextOutput(String title, List<String> commands)
@@ -376,46 +372,64 @@ public class PythonCondaInterpreter extends Interpreter {
    */
   @Override
   public Scheduler getScheduler() {
-    PythonInterpreter pythonInterpreter = null;
     try {
-      pythonInterpreter = getPythonInterpreter();
-      if (pythonInterpreter != null) {
-        return pythonInterpreter.getScheduler();
-      } else {
-        return null;
-      }
+      PythonInterpreter pythonInterpreter =
+          getInterpreterInTheSameSessionByClassName(PythonInterpreter.class, false);
+      return pythonInterpreter.getScheduler();
     } catch (InterpreterException e) {
-      e.printStackTrace();
       return null;
     }
   }
 
   public static String runCommand(List<String> commands)
       throws IOException, InterruptedException {
-
-    StringBuilder sb = new StringBuilder();
-
-    ProcessBuilder builder = new ProcessBuilder(commands);
-    builder.redirectErrorStream(true);
-    Process process = builder.start();
-    InputStream stdout = process.getInputStream();
-    BufferedReader br = new BufferedReader(new InputStreamReader(stdout));
-    String line;
-    while ((line = br.readLine()) != null) {
-      sb.append(line);
-      sb.append("\n");
+    logger.info("Starting shell commands: " + StringUtils.join(commands, " "));
+    Process process = Runtime.getRuntime().exec(commands.toArray(new String[0]));
+    StreamGobbler errorGobbler = new StreamGobbler(process.getErrorStream());
+    StreamGobbler outputGobbler = new StreamGobbler(process.getInputStream());
+    errorGobbler.start();
+    outputGobbler.start();
+    if (process.waitFor() != 0) {
+      throw new IOException("Fail to run shell commands: " + StringUtils.join(commands, " "));
     }
-    int r = process.waitFor(); // Let the process finish.
-
-    if (r != 0) {
-      throw new RuntimeException("Failed to execute `" +
-          StringUtils.join(commands, " ") + "` exited with " + r);
-    }
-
-    return sb.toString();
+    logger.info("Complete shell commands: " + StringUtils.join(commands, " "));
+    return outputGobbler.getOutput();
   }
 
-  public static String runCommand(String ... command)
+  private static class StreamGobbler extends Thread {
+    InputStream is;
+    StringBuilder output = new StringBuilder();
+
+    // reads everything from is until empty.
+    StreamGobbler(InputStream is) {
+      this.is = is;
+    }
+
+    public void run() {
+      try {
+        InputStreamReader isr = new InputStreamReader(is);
+        BufferedReader br = new BufferedReader(isr);
+        String line = null;
+        long startTime = System.currentTimeMillis();
+        while ((line = br.readLine()) != null) {
+          output.append(line + "\n");
+          // logging per 5 seconds
+          if ((System.currentTimeMillis() - startTime) > 5000) {
+            logger.info(line);
+            startTime = System.currentTimeMillis();
+          }
+        }
+      } catch (IOException ioe) {
+        ioe.printStackTrace();
+      }
+    }
+
+    public String getOutput() {
+      return output.toString();
+    }
+  }
+
+  public static String runCommand(String... command)
       throws IOException, InterruptedException {
 
     List<String> list = new ArrayList<>(command.length);
